[FIX] Overflow x

--- a/theme/style.scss
+++ b/theme/style.scss
@@ -12,15 +12,15 @@ $soft-gray: #d8d8d8;
 html {
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 body {
   font-size: 14px;
   font-family: "Roboto", sans-serif;
   line-height: normal;
   background-color: #f2f2f2;
-  overflow-x: hidden;
   padding: 10px;
-
+  overflow-x: hidden;
   h1 {
     color: $blue-black;
   }
@@ -48,6 +48,12 @@ body {
   img {
     margin-right: 10px;
     object-fit: cover;
+  }
+
+  .hidden-mobile{
+    @media (max-width: 600px) {
+      visibility: hidden;
+    }
   }
 }
 
@@ -141,7 +147,7 @@ span {
         text-decoration: none;
         height: inherit;
         @include flex(row, center);
-        div{
+        div {
           align-self: center;
         }
       }
@@ -356,9 +362,15 @@ span {
 
   .data-content {
     @include flex(row, center);
+    @media (max-width: 800px) {
+      flex-wrap: wrap;
+    }
     .data-text {
       width: 50%;
       margin: 30px 0 15px 15px;
+      @media (max-width: 800px) {
+        width: 100%;
+      }
     }
 
     .data-map {
@@ -368,6 +380,20 @@ span {
         width: 100%;
         height: 720px;
       }
+      @media (max-width: 800px) {
+        width: 100%;
+      }
     }
+  }
+}
+
+/* abm-news*/
+.abm-news-content {
+  margin-bottom: 100px+ 200px;
+  textarea {
+    height: 300px;
+  }
+  .form-check {
+    margin: 15px 0 0 30px;
   }
 }
